--- a/Crypto_screener.ipynb
+++ b/Crypto_screener.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPm5KTt/OAfYvz9PXBBCXOv",
+      "authorship_tag": "ABX9TyPCMD6bzTtyvmKFht9H4QAk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "JssjNESObQPu"
       },
-      "execution_count": 1,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -69,9 +69,9 @@
           "height": 175
         },
         "id": "kb5gHot1bt8q",
-        "outputId": "7edf7a01-25cc-46ed-eadc-e53af490b5ee"
+        "outputId": "fc5c9be9-e576-4271-b5aa-eb5c37e6ef63"
       },
-      "execution_count": 4,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -85,7 +85,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-518c7bb3-3714-48f1-bc4c-261b173edf00\">\n",
+              "  <div id=\"df-a7334c1b-9bf4-447f-92f4-6b3c632cd2e4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -138,7 +138,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-518c7bb3-3714-48f1-bc4c-261b173edf00')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a7334c1b-9bf4-447f-92f4-6b3c632cd2e4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -189,12 +189,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-518c7bb3-3714-48f1-bc4c-261b173edf00 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a7334c1b-9bf4-447f-92f4-6b3c632cd2e4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-518c7bb3-3714-48f1-bc4c-261b173edf00');\n",
+              "          const element = document.querySelector('#df-a7334c1b-9bf4-447f-92f4-6b3c632cd2e4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -217,7 +217,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 31
         }
       ]
     },
@@ -234,9 +234,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ka382gAhbUxc",
-        "outputId": "71d3c0d5-a824-447c-8bf3-c59140fc44b3"
+        "outputId": "0c0e86e2-3c4f-4387-9fd6-57a9440cac05"
       },
-      "execution_count": 3,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +281,7 @@
         "    .fillna(df['total_volume'])\n",
         "\n",
         "# Identify coins where last closing volume is 5 times bigger than 15-minute average\n",
-        "target_list = df[df['last_close_volume'] > 5 * df['turnover_15min_avg']]['id'].tolist()\n",
+        "target_list = df[df['last_close_volume'] > 5 * df['turnover_15min_avg']]['symbol'].tolist()\n",
         "\n",
         "print(target_list)"
       ],
@@ -290,15 +290,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j1V1MyZycAZI",
-        "outputId": "e39457e4-84e1-4c9d-cc37-3c99c769f914"
+        "outputId": "9fddbd9f-098f-44a1-a3c4-e6957e771730"
       },
-      "execution_count": 26,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['bitcoin', 'ethereum', 'tether', 'binancecoin', 'usd-coin', 'ripple', 'cardano', 'staked-ether', 'dogecoin', 'matic-network', 'solana', 'polkadot', 'litecoin', 'binance-usd', 'tron', 'the-open-network', 'okb', 'monero', 'ethereum-classic', 'internet-computer', 'stellar', 'filecoin', 'bitcoin-cash', 'true-usd', 'hedera-hashgraph', 'aptos', 'crypto-com-chain', 'lido-dao', 'arbitrum', 'near', 'quant-network', 'vechain', 'apecoin', 'algorand', 'the-graph', 'fantom', 'eos', 'the-sandbox', 'radix', 'elrond-erd-2', 'paxos-standard', 'aave', 'theta-token', 'frax', 'blockstack', 'decentraland', 'edgecoin-2', 'immutable-x', 'tezos', 'flow', 'axie-infinity', 'render-token', 'rocket-pool', 'kucoin-shares', 'havven', 'neo', 'curve-dao-token', 'gatechain-token', 'bitdao', 'usdd', 'klay-token', 'optimism', 'whitebit', 'chiliz', 'conflux-token', 'terra-luna', 'bitcoin-cash-sv', 'casper-network', 'gmx', 'maker', 'injective-protocol', 'mina-protocol', 'bittorrent', 'ecash', 'huobi-token', 'dash', 'rocket-pool-eth', 'iota', 'frax-share', 'xdce-crowd-sale', 'bitget-token', 'pancakeswap-token', 'tokenize-xchange', 'pax-gold', 'compound-ether', 'trust-wallet-token', 'tether-gold', 'gemini-dollar', 'kaspa', 'zilliqa', 'flare-networks', 'osmosis']\n"
+            "['btc', 'eth', 'usdt', 'bnb', 'usdc', 'xrp', 'ada', 'steth', 'doge', 'matic', 'sol', 'dot', 'ltc', 'busd', 'trx', 'ton', 'okb', 'xmr', 'etc', 'icp', 'xlm', 'fil', 'bch', 'tusd', 'hbar', 'apt', 'cro', 'ldo', 'arb', 'near', 'qnt', 'vet', 'ape', 'algo', 'grt', 'ftm', 'eos', 'sand', 'xrd', 'egld', 'usdp', 'aave', 'theta', 'mana', 'stx', 'frax', 'edgt', 'imx', 'xtz', 'flow', 'axs', 'rndr', 'rpl', 'kcs', 'snx', 'neo', 'crv', 'gt', 'bit', 'usdd', 'klay', 'op', 'wbt', 'chz', 'cfx', 'lunc', 'bsv', 'cspr', 'gmx', 'inj', 'mkr', 'mina', 'btt', 'xec', 'ht', 'dash', 'reth', 'fxs', 'miota', 'xdc', 'bgb', 'cake', 'tkx', 'paxg', 'ceth', 'twt', 'xaut', 'kas', 'gusd', 'zil', 'flr', 'osmo']\n"
           ]
         }
       ]
